--- a/style.css
+++ b/style.css
@@ -77,3 +77,7 @@ button:active::after{
 .page:not(.active) img {
   display: none;
 }
+.gallery img{
+  content-visibility:auto;
+  contain-intrinsic-size:300px 200px;
+}
